Set background based on state
Different backgrounds for the 3 possible player states: inactive, active, folded.

--- a/src/styles/Player.module.css
+++ b/src/styles/Player.module.css
@@ -1,3 +1,16 @@
 .name{
-  background-color:red;
+  text-align: center;
+  font-size: x-large;
+}
+
+.inactive{
+  background-color:lightblue;
+}
+
+.active{
+  background-color:sandybrown;
+}
+
+.folded{
+  background-color:gray;
 }
