--- a/src/styles/Community.module.css
+++ b/src/styles/Community.module.css
@@ -1,19 +1,39 @@
 .wrapper{
+  position: relative;
+  width: 220px;
+  height: 100px;
+
   border-style: solid;
   border-color: black;
   border-width: 2px;
-  width: 140px;
-  height: 95px;
+  
+  background-color: white;
 }
 
+.text{
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
 .board{
-
+  composes: text;
+  
+  top: 50%;
+  transform: translate(-50%, -50%);
+  
+  font-size: x-large;
+  font-weight: bold;
 }
 
 .pot{
-
+  composes: text;
+  bottom: 8%;
 }
 
 .round{
-
+  composes: text;
+  top: 10%;
+  font-weight: bold;
 }
