--- a/src/styles/Table.module.css
+++ b/src/styles/Table.module.css
@@ -1,7 +1,7 @@
 .wrapper{
   position: relative;
-  width: 220px;
-  height: 100px;
+  width: 600px;
+  height: 400px;
 
   border-style: solid;
   border-color: black;
@@ -9,3 +9,32 @@
   
   background-color: white;
 }
+
+.community{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.sb{
+  position: absolute;
+  left: 20%;
+  top: 80%;
+  transform: translate(-50%, -50%);
+}
+
+.bb{
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translate(-50%, -50%);
+}
+
+.bu{
+  position: absolute;
+  left: 80%;
+  top: 80%;
+  transform: translate(-50%, -50%);
+}
+
