--- a/src/styles/Action.module.css
+++ b/src/styles/Action.module.css
@@ -7,5 +7,27 @@
   border-color: black;
   border-width: 2px;
   
-  background-color: white;
+  background-color: gray;
+}
+
+.button{
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 20%;
+}
+
+.fold{
+  composes: button;
+  left: 20%;
+}
+
+.call{
+  composes: button;
+  left: 50%;
+}
+
+.raise{
+  composes: button;
+  left: 80%;
 }
