--- a/src/styles/Action.module.css
+++ b/src/styles/Action.module.css
@@ -14,20 +14,25 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 20%;
+  width: 15%;
 }
 
 .fold{
   composes: button;
-  left: 20%;
+  left: 15%;
 }
 
 .call{
   composes: button;
-  left: 50%;
+  left: 35%;
 }
 
 .raise{
   composes: button;
-  left: 80%;
+  left: 55%;
+}
+
+.amount{
+  composes: button;
+  left: 75%;
 }
